--- a/1.index-query-rank.ipynb
+++ b/1.index-query-rank.ipynb
@@ -5,8 +5,9 @@
    "id": "53c6a0e8-44f0-47f1-ab7e-d7247758dada",
    "metadata": {},
    "source": [
-    "### Assuntos:\n",
-    "# Tokenização, Pré Processamento, TF-IDF, Boolean-Retrieval-Model"
+    "# Modulo 1\n",
+    "### Indexing, Querying, e Ranking\n",
+    "#### Tokenização, Pré processamento, TF-IDF, Boolean Retrieval Model, Probabilistic Retrieval Model"
    ]
   },
   {
