Add classe TextDataset e teoria mod 1
-Feito Aulas 30 e 31
-Adicionado pdf com conteúdo teórico dos fundamentos

--- a/2.generative_ia.ipynb
+++ b/2.generative_ia.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "36794129-10b9-4a84-a272-6a4408d3cc93",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "a184b5c4-6066-44fe-9bde-faa1b11b6e0b",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "caeac024-cc73-4451-af8d-05ee8231f6d7",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "          1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]])}]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "564e1503-b89a-4195-94c3-7e8ae5004b13",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "176cd385-16b9-4427-a9dc-d25501d4f74d",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "8142e57b-c5d6-4995-af79-4bea2b90bedf",
    "metadata": {},
    "outputs": [],
@@ -294,8 +294,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "afd24ed3-c27d-493e-86e6-2421669a8aca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': tensor([[37573, 18252,   318,   257,  2214,   286, 11666,  4430,   326, 13536,\n",
+       "           9061,   284,  2193,   290,   787,  5370,  1231,   852, 11777, 27402,\n",
+       "             13, 18252,   318,  1760,   422,  1366,    11,   290,  2854, 19575,\n",
+       "            625,   640,   355,   649,  1366,   318,  5545,   284,   262,  2746,\n",
+       "             13, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256,\n",
+       "          50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256],\n",
+       "         [ 1858,   389,  1115,  1388,  3858,   286,  4572,  4673,    25, 28679,\n",
+       "             11,   555, 16668, 16149,    11,   290, 37414,  4673,    13,   554,\n",
+       "          28679,  4673,    11,   262,  2746,   318,  8776,   351, 15494,  1366,\n",
+       "             11,   981,   287,   555, 16668, 16149,  4673,    11,   262,  2746,\n",
+       "           8404,   284,  1064,  7104,  7572,   287,  9642,  9608,   276,  1366,\n",
+       "             13, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256]]),\n",
+       " 'attention_masks': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0,\n",
+       "          0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "          1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0]]),\n",
+       " 'labels': tensor([[37573, 18252,   318,   257,  2214,   286, 11666,  4430,   326, 13536,\n",
+       "           9061,   284,  2193,   290,   787,  5370,  1231,   852, 11777, 27402,\n",
+       "             13, 18252,   318,  1760,   422,  1366,    11,   290,  2854, 19575,\n",
+       "            625,   640,   355,   649,  1366,   318,  5545,   284,   262,  2746,\n",
+       "             13, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256,\n",
+       "          50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256],\n",
+       "         [ 1858,   389,  1115,  1388,  3858,   286,  4572,  4673,    25, 28679,\n",
+       "             11,   555, 16668, 16149,    11,   290, 37414,  4673,    13,   554,\n",
+       "          28679,  4673,    11,   262,  2746,   318,  8776,   351, 15494,  1366,\n",
+       "             11,   981,   287,   555, 16668, 16149,  4673,    11,   262,  2746,\n",
+       "           8404,   284,  1064,  7104,  7572,   287,  9642,  9608,   276,  1366,\n",
+       "             13, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256]])}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Criando uma classe dataset customizada incluindo datalabels\n",
+    "class TextDataset(Dataset):\n",
+    "    def __init__(self, input_ids, attention_masks):\n",
+    "        self.input_ids = input_ids\n",
+    "        self.attention_masks = attention_masks\n",
+    "        self.labels = input_ids.clone()\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.input_ids)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return {\n",
+    "            'input_ids' : self.input_ids[idx],\n",
+    "            'attention_masks' : self.attention_masks[idx],\n",
+    "            'labels' : self.labels[idx]\n",
+    "        }\n",
+    "\n",
+    "# criando objeto da classe\n",
+    "dataset = TextDataset(padded_input_ids, padded_attention_masks)\n",
+    "dataset[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2131483-c254-45ab-b07f-add6fcfe6037",
    "metadata": {},
    "outputs": [],
    "source": []
