fine tunning com gpt 2 e teoria 2
-Implementação de Fine Tunning com gpt 2;
-PDF de teoria 2, com os fundamentos de Generative AI.

--- a/2.generative_ia.ipynb
+++ b/2.generative_ia.ipynb
@@ -313,7 +313,7 @@
        "             11,   981,   287,   555, 16668, 16149,  4673,    11,   262,  2746,\n",
        "           8404,   284,  1064,  7104,  7572,   287,  9642,  9608,   276,  1366,\n",
        "             13, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256, 50256]]),\n",
-       " 'attention_masks': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       " 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
        "          1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0,\n",
        "          0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
        "         [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
@@ -352,7 +352,7 @@
     "    def __getitem__(self, idx):\n",
     "        return {\n",
     "            'input_ids' : self.input_ids[idx],\n",
-    "            'attention_masks' : self.attention_masks[idx],\n",
+    "            'attention_mask' : self.attention_masks[idx],\n",
     "            'labels' : self.labels[idx]\n",
     "        }\n",
     "\n",
@@ -362,9 +362,144 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "011fa1bb-52c2-46d7-a9f7-b364aff64b0b",
+   "metadata": {},
+   "source": [
+    "## Fine Tuning o GPT 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "51d6290c-2c37-4247-87c2-2ecf8ec64df2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preparando os dados em batches\n",
+    "dataloader = DataLoader(dataset, batch_size = 2, shuffle = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8552df83-777d-4fd3-9fd4-20feefd9ed62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`loss_type=None` was set in the config but it is unrecognised.Using the default loss: `ForCausalLMLoss`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 - Loss: 2.90610671043396\n",
+      "Epoch 2 - Loss: 2.357048988342285\n",
+      "Epoch 3 - Loss: 1.9948416948318481\n",
+      "Epoch 4 - Loss: 1.6582231521606445\n",
+      "Epoch 5 - Loss: 1.344558596611023\n",
+      "Epoch 6 - Loss: 0.9374242424964905\n",
+      "Epoch 7 - Loss: 0.7848874926567078\n",
+      "Epoch 8 - Loss: 0.4702298045158386\n",
+      "Epoch 9 - Loss: 0.4030720591545105\n",
+      "Epoch 10 - Loss: 0.4024461507797241\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inicializando um optimizer\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr = 5e-5)\n",
+    "\n",
+    "# Colocando o modelo em training mode\n",
+    "model.train()\n",
+    "\n",
+    "# Loop de treino\n",
+    "\n",
+    "# vezes que o modelo sera treinado\n",
+    "for epoch in range(10): \n",
+    "    for batch in dataloader:\n",
+    "        # Pegando os input ids e attention mask\n",
+    "        input_ids = batch['input_ids']\n",
+    "        attention_mask = batch['attention_mask']\n",
+    "\n",
+    "        # Resetando os gradients para zero / zerando o optimizer\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        # Forward pass\n",
+    "        # Processando o input e attention masks\n",
+    "        outputs = model(input_ids = input_ids,\n",
+    "                       attention_mask = attention_mask,\n",
+    "                       labels = input_ids)\n",
+    "        loss = outputs.loss\n",
+    "\n",
+    "        # Backward pass: compute the gradients of the loss\n",
+    "        loss.backward()\n",
+    "\n",
+    "        # Atualiza os parametros do modelo\n",
+    "        optimizer.step()\n",
+    "    \n",
+    "    # Printando o loss para a epoch atual para monitorar o progresso\n",
+    "    print(f\"Epoch {epoch + 1} - Loss: {loss.item()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "02b4d91a-b7b6-4e68-a78c-eba523dcb84f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definindo função para gerar texto\n",
+    "def gerar_texto(prompt, model, tokenizer, max_length = 100):\n",
+    "    # Encoding the prompt to get the input ids\n",
+    "    inputs = tokenizer.encode_plus(prompt, return_tensors = \"pt\")\n",
+    "    input_ids = inputs['input_ids']\n",
+    "    attention_mask = inputs['attention_mask']\n",
+    "\n",
+    "    # Gerar texto usando o modelo\n",
+    "    outputs = model.generate(input_ids, \n",
+    "                             attention_mask = attention_mask, \n",
+    "                             max_length = max_length)\n",
+    "\n",
+    "    return tokenizer.decode(outputs[0], skip_special_tokens = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "85021106-4ec7-41b7-8a11-52370dd831c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "About Machine Learning, we  learn algorithms by training data, allowing each model with a large set of previously unstructured data.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Testando a função\n",
+    "prompt = \"About Machine Learning, we \"\n",
+    "texto_gerado = gerar_texto(prompt, model, tokenizer, max_length = 500)\n",
+    "print(texto_gerado)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2131483-c254-45ab-b07f-add6fcfe6037",
+   "id": "20043448-b335-4288-8a16-c1ef3211c448",
    "metadata": {},
    "outputs": [],
    "source": []
